--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,33 +1,28 @@
-- id: doi:10.1016/j.csbj.2020.05.017
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
-  date: 2020-6-2
+- id: doi:10.1016/j.celrep.2021.108776
+  image: https://els-jbs-prod-cdn.jbs.elsevierhealth.com/cms/attachment/144d6abb-0979-4368-87f9-e337f9b43305/fx1.jpg
+  date: 2021-4-23
   extra-links:
     - type: manubot
-      link: https://greenelab.github.io/knowledge-graph-review/
+      link: https://huangzy2.github.io/DNA-methyltransferase-article/
   tags:
-    - knowledge graphs
+    - DNA methyltransferase
 
-- id: doi:10.1371/journal.pcbi.1007128
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
-  repo: greenelab/meta-review
+- id: doi:10.1021/acs.biochem.0c00339
+  image: https://pubs.acs.org/cms/10.1021/acs.biochem.0c00339/asset/images/medium/bi0c00339_0006.gif
+  repo: huangzy2/Sequence-Preferences-article
   extra-links:
     - type: manubot
-      link: https://greenelab.github.io/meta-review/
+      link: https://huangzy2.github.io//Sequence-Preferences-article/
     - type: source
-      link: https://github.com/greenelab/meta-review
-    - type: website
-      link: http://manubot.org/
+      link: https://github.com/huangzy2/Sequence-Preferences-article
 
-- id: doi:10.7554/eLife.32822
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+- id: doi:10.1038/s41594-018-0131-8
+  image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41594-018-0131-8/MediaObjects/41594_2018_131_Fig1_HTML.png?as=webp
   extra-links:
-    - type: preprint
-      link: https://doi.org/10.7287/peerj.preprints.3100v1
     - type: manubot
-      link: https://greenelab.github.io/scihub-manuscript/
+      link: https://huangzy2.github.io/G4-structures-article/
     - type: source
-      link: https://github.com/greenelab/scihub-manuscript
-      text: Manuscript source
+      link: https://github.com/huangzy2/G4-structures-article
     - type: source
-      link: https://github.com/greenelab/scihub
+      link: https://github.com/huangzy2/article
       text: Analyses source
